# cookiecutter-pynchy-plugin

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_template_generation.py
{{cookiecutter.plugin_repo_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.plugin_repo_name}}/src/{{cookiecutter.python_module}}/: __init__.py  channel.py  core.py  runtime.py  server.py
{{cookiecutter.plugin_repo_name}}/src/{{cookiecutter.python_module}}/skills/{{cookiecutter.plugin_slug}}/: SKILL.md
{{cookiecutter.plugin_repo_name}}/tests/: test_plugin_generation.py
